testData/diagnostics/div64_by_minus_one_opt.diag.txt
ERROR: too many digits for an Hex number
testData/diagnostics/div64_by_minus_one_opt.nut:1:9

print( (-0x7FFFFFFF_FFFFFFFF-1) / -1 )
         ^------------------


